[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mudparser"
version = "2.0.0"
description = "A production-ready parser for MUD (Manufacturer Usage Description) profiles - RFC 8520 & RFC 9761 compliant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Omar I. EL MIMOUNI", email = "omarilias.elmimouni@nist.gov" }
]
maintainers = [
    { name = "Omar I. EL MIMOUNI", email = "omarilias.elmimouni@nist.gov" }
]
keywords = [
    "mud",
    "manufacturer-usage-description",
    "iot",
    "iot-security",
    "network-security",
    "acl",
    "access-control-list",
    "firewall",
    "rfc8520",
    "rfc9761",
    "sdn",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9",
    "httpx>=0.25",
]

[project.optional-dependencies]
demo = [
    "streamlit>=1.30",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "mudparser[demo,dev,docs]",
]

[project.scripts]
mudparser = "mudparser.cli:app"

[project.urls]
Homepage = "https://github.com/elmiomar/mudparser"
Documentation = "https://elmimouni.net/mudparser"
Repository = "https://github.com/elmiomar/mudparser"
Issues = "https://github.com/elmiomar/mudparser/issues"
Changelog = "https://github.com/elmiomar/mudparser/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/data",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mudparser"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.lint.isort]
known-first-party = ["mudparser"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/mudparser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 90
show_missing = true
